# cassandra-auth

./: .gitignore  .woodpecker.yaml  CLAUDE.md
infra/modules/acl-edge/: main.tf  outputs.tf
infra/modules/auth-worker/: variables.tf
python/: pyproject.toml
python/src/cassandra_mcp_auth/: __init__.py  acl.py  auth.py
python/tests/: test_acl.py
service/src/cassandra_auth_service/: app.py
src/: index.ts
worker/: package-lock.json  package.json  worker-configuration.d.ts  wrangler.jsonc.example
worker/src/: enforcer.ts  index.ts  policy.ts  types.ts
