[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cassandra-mcp-auth"
version = "0.1.0"
description = "Shared auth package for Cassandra FastMCP services"
requires-python = ">=3.12"
dependencies = [
  "fastmcp>=3.0.0",
  "httpx>=0.28.1",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0.2",
  "ruff>=0.15.5",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"
